# slim-pa

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  mak.md  models.json  pyproject.toml
.pi/: SYSTEM.md  settings.json
.pi/extensions/calendar/: index.ts  package-lock.json  package.json
.pi/extensions/memory/: .gitignore  index.ts  package-lock.json  package.json
.pi/extensions/web/: .gitignore  index.ts  package-lock.json  package.json
.pi/extensions/youtube-transcript/: index.ts  package-lock.json  package.json
.pi/prompts/: review.md
.pi/skills/browser-tools/: SKILL.md  browser-content.js  package-lock.json  package.json
.pi/skills/web/: SKILL.md  package-lock.json  web-content.js  web-search.js
.pi/skills/web-tools/: .gitignore  SKILL.md  extract.py  package.json  web-content.js
docs/: slim-pa-arch.drawio
khal/: config
src/: __init__.py  main.py
src/agent/: ai_agent.py  pi_rpc_client_async.py  pi_rpc_client_full.py  rpc_client_basic.py  rpc_client_full.py  rpc_client_helper.py
src/bot/: rpc_client_helper.py  telegram_bot.py  telegram_bot_pydanticai_not_used.py
src/config/: config.py
src/memory/: memory.py
src/tools/: web_tools.py
