[project]
name = "slim-pa"
version = "0.1.0"
description = "A simple lightweight personal AI agent with Telegram integration"
authors = [{ name = "Mak", email = "mak1186@gmail.com" }]
requires-python = ">=3.12"
dependencies = [
    "aiogram",
    "python-dotenv",
    "pydantic-settings",
    "ddgs",
    "loguru",
    "telegramify_markdown"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/"]